@@ -2,6 +2,10 @@
 ** MovieJukebox Release note
 ***************************************************************
 
+MovieJukebox 1.0.17 beta
+------------------------
+  - Fixed defect #662 FilmDeltaSEPlugin can't handle "illegal HTML characters"
+
 MovieJukebox 1.0.16 beta
 ------------------------
   - Enhancement  #113 Single series pages. If the mjb.singleSeriesPage=true the separate season index is generated for each series.
